# tray-hs

./: .gitmodules  LICENSE  README.md  flake.nix  tray-hs.cabal
Graphics/: Tray.hs
Graphics/Tray/: Internal.hsc
demo/: Main.hs
