cabal-version: 3.4
name:          tray-hs
version:       0.0.1.0
license:       MIT
author:        htngr
maintainer:    htngr
build-type:    Simple
license-file:  LICENSE

library
  ghc-options:        -Wall -threaded
  default-language:   Haskell2010
  default-extensions:
    CPP
    ForeignFunctionInterface
    OverloadedStrings
    RecordWildCards

  build-tool-depends: hsc2hs:hsc2hs
  ghc-options:        -Wall -fno-warn-name-shadowing
  cc-options:         -Wall -fno-strict-aliasing
  include-dirs:       tray
  includes:           tray.h
  build-depends:      base >=4.5 && <5
  exposed-modules:
    Graphics.Tray
    Graphics.Tray.Internal

  if os(windows)
    c-sources: tray/tray_windows.c

  if os(linux)
    pkgconfig-depends:
      gtk+-3.0, ayatana-appindicator3-0.1, ayatana-indicator3-0.4

    c-sources:         tray/tray_linux.c

  if os(osx)
    c-sources: tray/tray_darwin.m

executable example
  hs-source-dirs: demo
  main-is:        Main.hs
  build-depends:
    , base
    , tray-hs

source-repository head
  type:     git
  location: git://github.com/htngr/tray-hs
